@@ -90,6 +90,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #964437 Make IDLE help window non-modal.
+  Patch by Guilherme Polo and Roger Serwy.
+
 - Issue #13933: IDLE auto-complete did not work with some imported
   module, like hashlib.  (Patch by Roger Serwy)
 
